<resources>
    <string name="app_name">Really Useful Notes</string>

    <!-- Menu -->
    <string name="action_settings">Settings</string>
    <string name="action_add_note">Add Note</string>
    <string name="action_view_notes">View Notes</string>
    <string name="action_save_note">Save Note</string>
    <string name="action_delete_note">Delete Note</string>

    <!-- Empty Data Fragment -->
    <string name="edf_welcome">Welcome to Really Useful Notes!
        \n\n
        Press the \'+\' symbol to get started.</string>

    <!-- Note Fragment -->
    <string name="nf_hint">Enter your note here! ＿〆(。。)</string>

    <!-- Add Note Dialog -->
    <string name="and_title">Add Note</string>
    <string name="and_title_prompt">Title</string>

    <!-- Delete Note Dialog -->
    <string name="dnd_title">Delete Confirmation</string>
    <string name="dnd_content">Confirm Delete for %s?</string>

    <!-- System -->
    <string name="loading">Loading&#8230;</string>
    <string name="cancel">Cancel</string>
    <string name="accept">OK</string>
    <string name="header_image">Header Image</string>
    <string name="vf_rv_overflow_content_description">Row Overflow Menu</string>
    <string name="rom_item_icon_content_desc">Menu Icon</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="icon">Icon</string>
    <string name="action_sort">sort</string>
    <string name="action_sort_by_custom">Custom</string>
    <string name="action_sort_by_date_added">Date Added</string>
    <string name="action_sort_by_title">Title</string>

</resources>
